--- a/web/worklog/package.json
+++ b/web/worklog/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-spinners": "^0.4.5",
     "reactstrap": "^6.4.0"
   },
   "scripts": {
