--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,12 @@ services:
       - .:/code
     depends_on:
       - mongo
+
+  ui:
+    build: web/worklog
+    ports:
+      - "3000:3000"
+    depends_on:
+      - web
+    environment:
+      - REACT_APP_APP_SERVER=http://localhost:5000
