--- a/web/worklog/package.json
+++ b/web/worklog/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^2.7.2",
     "history": "^4.7.2",
     "react": "^16.5.2",
+    "react-big-calendar": "^0.20.1",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
